--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -218,6 +218,7 @@
     <Compile Include="Pages\WorldMap.xaml.cs">
       <DependentUpon>WorldMap.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Tools\AgentAutoLauncher.cs" />
     <Compile Include="Tools\AircraftRegistryExtensions.cs" />
     <Compile Include="Tools\AssemblyVersionExtension.cs" />
     <Compile Include="Tools\ColorExtensions.cs" />
@@ -568,13 +569,13 @@
       <Version>1.5.0.6</Version>
     </PackageReference>
     <PackageReference Include="JetBrains.Annotations">
-      <Version>2022.1.0</Version>
+      <Version>2023.3.0</Version>
     </PackageReference>
     <PackageReference Include="MdXaml">
-      <Version>1.13.0</Version>
+      <Version>1.21.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers">
-      <Version>6.0.0</Version>
+      <Version>7.0.4</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -585,13 +586,13 @@
       <Version>0.5.2</Version>
     </PackageReference>
     <PackageReference Include="ModernWpfUI">
-      <Version>0.9.4</Version>
+      <Version>0.9.6</Version>
     </PackageReference>
     <PackageReference Include="MSFT.ParallelExtensionsExtras">
       <Version>1.2.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>13.0.1</Version>
+      <Version>13.0.3</Version>
     </PackageReference>
     <PackageReference Include="OpenSky.AirportsJSON">
       <Version>0.3.0</Version>
@@ -603,34 +604,34 @@
       <Version>0.2.0</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfChart.WPF">
-      <Version>20.1.0.52</Version>
+      <Version>23.1.44</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfInput.WPF">
-      <Version>20.1.0.52</Version>
+      <Version>23.1.44</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfProgressBar.WPF">
-      <Version>20.1.0.52</Version>
+      <Version>23.1.44</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfSkinManager.Wpf">
-      <Version>20.1.0.52</Version>
+      <Version>23.1.44</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Shared.WPF">
-      <Version>20.1.0.52</Version>
+      <Version>23.1.44</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF">
-      <Version>20.1.0.52</Version>
+      <Version>23.1.44</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Tools.WPF">
-      <Version>20.1.0.52</Version>
+      <Version>23.1.44</Version>
     </PackageReference>
     <PackageReference Include="System.Data.SQLite">
-      <Version>1.0.115.5</Version>
+      <Version>1.0.118</Version>
     </PackageReference>
     <PackageReference Include="System.Linq.Dynamic.Core">
-      <Version>1.2.18</Version>
+      <Version>1.3.5</Version>
     </PackageReference>
     <PackageReference Include="TomsToolbox.Wpf">
-      <Version>2.7.6</Version>
+      <Version>2.10.0</Version>
     </PackageReference>
     <PackageReference Include="XDMessaging.Lite">
       <Version>5.0.6</Version>
