--- a/OpenSky.Client/Properties/Settings.settings
+++ b/OpenSky.Client/Properties/Settings.settings
@@ -50,5 +50,11 @@
     <Setting Name="ShortDistanceUnit" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="AutoLaunchAgent" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="FlightTrackingAgentLocation" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">C:\Program Files\OpenSky\Flight Tracking Agent\OpenSky.Agent.exe</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
